# orra

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
.kamal/: secrets  secrets.example
app/: feed.py  jobs.py  models.py  transcript.py  web.py
app/static/: style.css
app/templates/: episode.html  index.html  login.html
app/tts/: __init__.py  base.py  elevenlabs.py  openai.py
config/: deploy.yml
tests/: conftest.py  test_feed.py  test_jobs.py  test_models.py  test_routes.py  test_transcript.py  test_tts.py
