[project]
name = "orra"
version = "0.1.0"
description = "Single-voice podcast generator powered by Claude + TTS"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "anthropic>=0.40",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "gunicorn>=21.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
